<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtIssueKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/lab_issuekey"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtIssueSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtIssueKey"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/lab_summary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/lab_deslog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtIssueSummary"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:text="@string/lab_worklog"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edt_worklog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lab_deslog"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:hint="@string/lab_workloghint"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        />

    <LinearLayout
        android:id="@+id/lldatepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_worklog"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lab_dateselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/lab_dateselected"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt_dateselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/lab_dateselected"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_dateselect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/lab_btodatesel"
            android:textColor="#f25a55"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llHourLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lldatepicker"
        android:layout_marginTop="5dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lab_worklogtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/lab_worktimeselected"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />

        <RelativeLayout
            android:id="@+id/rlHourLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/txthourTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:text="@string/lab_hours"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtminutTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="@string/lab_minute"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <NumberPicker
                android:id="@+id/hourTime"
                android:theme="@style/AppTheme.Picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/txthourTime"
                android:layout_below="@id/txthourTime"
                android:layout_marginTop="3dp" />

            <NumberPicker
                android:id="@+id/minutTime"
                android:theme="@style/AppTheme.Picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_below="@id/txtminutTime"
                android:layout_alignStart="@id/txtminutTime"
                 />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llHourLog"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:text="@string/lab_btosave"
            android:textColor="#f25a55"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/lab_btocancel"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llWait"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llbto"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

    </LinearLayout>

</RelativeLayout>
